--- a/analysis/data-preparation.ipynb
+++ b/analysis/data-preparation.ipynb
@@ -17,30 +17,16 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "745e22ff",
-   "metadata": {},
-   "source": [
-    "Importing libraries"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "131a20e6",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importing libraries.\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "37e3bf03",
-   "metadata": {},
-   "source": [
-    "Loading data from csv files"
    ]
   },
   {
@@ -52,6 +38,8 @@
    },
    "outputs": [],
    "source": [
+    "# Loading data from csv files.\n",
+    "\n",
     "microdata = pd.read_csv('database/MICRODADOS_ENEM_2021.csv', \n",
     "                        sep = ';', \n",
     "                        encoding='latin-1')"
@@ -67,20 +55,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The database has 3389832 lines and 76 columns\n"
+      "The dataset has 3389832 rows and 76 columns\n"
      ]
     }
    ],
    "source": [
-    "print(f'The database has {microdata.shape[0]} lines and {microdata.shape[1]} columns')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8b46e071",
-   "metadata": {},
-   "source": [
-    "Selecting the most interesting columns for the analysis"
+    "# Printing the size of the dataset.\n",
+    "\n",
+    "print(f'The dataset has {microdata.shape[0]} rows and {microdata.shape[1]} columns')"
    ]
   },
   {
@@ -88,16 +70,10 @@
    "execution_count": 4,
    "id": "d7ce745d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The database has 3389832 lines and 11 columns\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Selecting the most interesting columns for the analysis.\n",
+    "\n",
     "interesting_columns = ['TP_FAIXA_ETARIA',\n",
     "                       'TP_SEXO',\n",
     "                       'TP_ESCOLA',\n",
@@ -111,14 +87,32 @@
     "                       'Q006']\n",
     "\n",
     "microdata = pd.DataFrame(microdata, \n",
-    "                         columns = interesting_columns)\n",
-    "\n",
-    "print(f'The database has {microdata.shape[0]} lines and {microdata.shape[1]} columns')"
+    "                         columns = interesting_columns)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "82873ca6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The database has 3389832 rows and 11 columns\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Printing the new size of the dataset.\n",
+    "\n",
+    "print(f'The database has {microdata.shape[0]} rows and {microdata.shape[1]} columns')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "fc240ecf",
    "metadata": {},
    "outputs": [
@@ -247,26 +241,20 @@
        "4       497.7       532.4       457.6       582.6            780.0    C  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Printing the five first rows of the dataset.\n",
+    "\n",
     "microdata.head(5)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "d80caba7",
-   "metadata": {},
-   "source": [
-    "Removing null values"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "a4732f44",
    "metadata": {
     "scrolled": true
@@ -289,22 +277,26 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Looking for null values.\n",
+    "\n",
     "microdata.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "627bdd62",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Looking for grades with \"0\" score.\n",
+    "\n",
     "microdata['NU_NOTA_CN'].replace(0, np.nan, inplace = True)\n",
     "microdata['NU_NOTA_CH'].replace(0, np.nan, inplace = True)\n",
     "microdata['NU_NOTA_LC'].replace(0, np.nan, inplace = True)\n",
@@ -314,18 +306,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "ac543649",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Removing null values.\n",
+    "\n",
     "microdata.dropna(axis = 0, \n",
     "                 inplace = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "2b9848cb",
    "metadata": {},
    "outputs": [
@@ -346,41 +340,39 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Looking for null values again.\n",
+    "\n",
     "microdata.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "bf0403bf",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Reseting the index of the dataset.\n",
+    "\n",
     "microdata.reset_index(inplace = True, \n",
     "                      drop = True)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "40ec5e67",
-   "metadata": {},
-   "source": [
-    "Replacing coded values "
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "73df51b4",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Replacing coded values in the 'age' column.\n",
+    "\n",
     "microdata.replace({'TP_FAIXA_ETARIA': {1: 'Under 20' ,\n",
     "                                       2: 'Under 20',\n",
     "                                       3: 'Under 20',\n",
@@ -406,11 +398,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "2eaee212",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Replacing coded values in the 'school' column.\n",
+    "\n",
     "microdata.replace({'TP_ESCOLA': {1: 'Did not answer',\n",
     "                                  2: 'Public',\n",
     "                                  3: 'Private'}},\n",
@@ -419,11 +413,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "65faa0ec",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Replacing coded values in the 'income' column.\n",
+    "\n",
     "microdata.replace({'Q006': {'A': 'No income',\n",
     "                            'B': 'Up to 1 minimum wage',\n",
     "                            'C': 'Between 1 and 5 minimum wages',\n",
@@ -445,20 +441,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "ac6dd615",
-   "metadata": {},
-   "source": [
-    "Renaming the columns"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "d51399e1",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Renaming the columns.\n",
+    "\n",
     "microdata.rename(columns={'TP_FAIXA_ETARIA': 'age',\n",
     "                          'TP_SEXO': 'gender',\n",
     "                          'TP_ESCOLA': 'school',\n",
@@ -475,16 +465,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c3880c17",
-   "metadata": {},
-   "source": [
-    "Verifying the columns types"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "34820a30",
    "metadata": {},
    "outputs": [
@@ -505,44 +487,32 @@
        "dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Verifying the columns types.\n",
+    "\n",
     "microdata.dtypes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "48caabcf",
-   "metadata": {},
-   "source": [
-    "Creating a new column for the final grade"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "559a4e8a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "microdata['final_grade'] = (microdata['natural_sciences_grade'] + microdata['human_sciences_grade'] + microdata['languages_grade'] + microdata['mathematics_grade'] + microdata['essay_grade'])/5"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "74b65ad7",
-   "metadata": {},
-   "source": [
-    "Printing the first lines of the final dataset"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "559a4e8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating a new column for the final grade.\n",
+    "\n",
+    "microdata['final_grade'] = (microdata['natural_sciences_grade'] + microdata['human_sciences_grade'] + microdata['languages_grade'] + microdata['mathematics_grade'] + microdata['essay_grade'])/5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "c08f5245",
    "metadata": {},
    "outputs": [
@@ -684,48 +654,48 @@
        "4              413.3        380.0           Up to 1 minimum wage       466.94  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Printing the first rows of the final dataset.\n",
+    "\n",
     "microdata.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "bc8c2daf",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The database has 2173531 lines and 12 columns\n"
+      "The database has 2173531 rows and 12 columns\n"
      ]
     }
    ],
    "source": [
-    "print(f'The database has {microdata.shape[0]} lines and {microdata.shape[1]} columns')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9c9752ca",
-   "metadata": {},
-   "source": [
-    "Creating a new csv with the clean dataset"
+    "# Printing the final size of the dataset.\n",
+    "\n",
+    "print(f'The database has {microdata.shape[0]} rows and {microdata.shape[1]} columns')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "163e08c3",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating a new csv with the clean dataset.\n",
+    "\n",
     "microdata.to_csv('database/MICRODADOS_ENEM_2021_v2.csv', sep = ';', encoding='latin-1')"
    ]
   }
