--- a/analysis/hypothesis-testing.ipynb
+++ b/analysis/hypothesis-testing.ipynb
@@ -13,7 +13,7 @@
    "id": "9dbbb9e3",
    "metadata": {},
    "source": [
-    "> *With the data visualization, it was possible to notice a difference in the median of the final grades grouping by gender, type of school, income and age group. In this step, let's check if the differences are statistically significant.*"
+    "> *With the data visualization, it was possible to notice differences in the medians of the final grades grouping by gender, type of school, income and age group. In this step, let's check if the differences are statistically significant.*"
    ]
   },
   {
@@ -23,6 +23,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importing libraries.\n",
+    "\n",
     "from scipy.stats import normaltest\n",
     "from scipy.stats import mannwhitneyu\n",
     "import pandas as pd\n",
@@ -37,6 +39,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Loading the csv file.\n",
+    "\n",
     "microdata = pd.read_csv('database/MICRODADOS_ENEM_2021_v2.csv', \n",
     "                        sep = ';', \n",
     "                        encoding='latin-1')"
@@ -47,7 +51,7 @@
    "id": "360fa9a5",
    "metadata": {},
    "source": [
-    "Checking if the sample is normally distributed"
+    "## Checking if the sample is normally distributed"
    ]
   },
   {
@@ -68,6 +72,8 @@
     }
    ],
    "source": [
+    "# Creating a histplot to show the distribution of the dataset.\n",
+    "\n",
     "sns.set_style('darkgrid')\n",
     "plt.figure(figsize=(16,4))\n",
     "\n",
@@ -104,6 +110,8 @@
     }
    ],
    "source": [
+    "# Calculating the p value of the normality test.\n",
+    "\n",
     "stat_test, p_value = normaltest(microdata['final_grade'])\n",
     "print(f'P-value: {p_value}')"
    ]
@@ -121,15 +129,7 @@
    "id": "6fa866d6",
    "metadata": {},
    "source": [
-    "## Differences in the median grades by gender"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e146d0f2",
-   "metadata": {},
-   "source": [
-    "Testing if there's difference between the final grades by gender."
+    "## Median final grades by gender"
    ]
   },
   {
@@ -149,6 +149,8 @@
     }
    ],
    "source": [
+    "# Testing if there's difference between the final grades by gender.\n",
+    "\n",
     "group_1 = microdata['final_grade'][microdata['gender'] == \"M\"]\n",
     "group_2 = microdata['final_grade'][microdata['gender'] == \"F\"]\n",
     "\n",
@@ -170,15 +172,7 @@
    "id": "f6b0f339",
    "metadata": {},
    "source": [
-    "## Differences in the median grades by type of school"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cc74c813",
-   "metadata": {},
-   "source": [
-    "Testing if there's difference between the final grades by type of school."
+    "## Median final grades by type of school"
    ]
   },
   {
@@ -198,6 +192,8 @@
     }
    ],
    "source": [
+    "# Testing if there's difference between the final grades by type of school.\n",
+    "\n",
     "group_1 = microdata['final_grade'][microdata['school'] == \"Private\"]\n",
     "group_2 = microdata['final_grade'][microdata['school'] == \"Public\"]\n",
     "\n",
@@ -219,15 +215,7 @@
    "id": "dbdf48d1",
    "metadata": {},
    "source": [
-    "## Differences in the median grades by income"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5a6101a0",
-   "metadata": {},
-   "source": [
-    "Testing if there's difference between the final grades of the income group \"up to 1 minimum wage\" and \"between 1 and 5 minimum wages\"."
+    "##  Median final grades by income"
    ]
   },
   {
@@ -247,6 +235,8 @@
     }
    ],
    "source": [
+    "# Testing if there's difference between the final grades of the income group \"up to 1 minimum wage\" and \"between 1 and 5 minimum wages\".\n",
+    "\n",
     "group_1 = microdata['final_grade'][microdata['income'] == \"Up to 1 minimum wage\"]\n",
     "group_2 = microdata['final_grade'][microdata['income'] == \"Between 1 and 5 minimum wages\"]\n",
     "\n",
@@ -268,15 +258,7 @@
    "id": "1ce0eec0",
    "metadata": {},
    "source": [
-    "## Differences in the median grades by age groups"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a24c708c",
-   "metadata": {},
-   "source": [
-    "Testing if there's difference between the final grades of the age group \"under 20\" and \"between 21 and 30\"."
+    "## Median final grades by age groups"
    ]
   },
   {
@@ -296,6 +278,8 @@
     }
    ],
    "source": [
+    "# Testing if there's difference between the final grades of the age group \"under 20\" and \"between 21 and 30\".\n",
+    "\n",
     "group_1 = microdata['final_grade'][microdata['age'] == \"Under 20\"]\n",
     "group_2 = microdata['final_grade'][microdata['age'] == \"Between 20 and 30\"]\n",
     "\n",
@@ -337,6 +321,8 @@
     }
    ],
    "source": [
+    "# Testing if there's difference between the final grades of the age group \"between 41 and 50\"\" and \"between 51 and 60\".\n",
+    "\n",
     "group_1 = microdata['final_grade'][microdata['age'] == \"Between 41 and 50\"]\n",
     "group_2 = microdata['final_grade'][microdata['age'] == \"Between 51 and 60\"]\n",
     "\n",
