--- a/analysis/data-visualization.ipynb
+++ b/analysis/data-visualization.ipynb
@@ -368,7 +368,7 @@
    "id": "2e5a1aa5",
    "metadata": {},
    "source": [
-    "The median final grade of male participants was greater than the median final grade of female.\n",
+    "The median final grade of male participants was greater than the median final grade of female participants.\n",
     "\n",
     "We can make the same analysis but grouping by subject to check if the same thing occours in all subjects."
    ]
